# risc86

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
efiloader/: Makefile  main.c  meson.build
kernel/: Makefile  acpi.cpp  acpi.h  cpu.cpp  cpu.h  devicetree.cpp  devicetree.h  hart.cpp  hart.h  hpet.cpp  hpet.h  kernel.ld  loaderapi.h  main.cpp  mem.cpp  mem.h  meson.build  newlib_stubs.cpp  pci.cpp  pci.h  percpu.cpp  percpu.h  rvmmu.cpp  rvmmu.h  sbi.cpp  sbi.h  smp.cpp  smp.h  utils.cpp  utils.h  x86interrupts.cpp  x86interrupts.h  x86jit.cpp  x86jit.h  x86mmu.cpp  x86mmu.h
logo/: logo.kra
